--- a/ecommerce-react/src/components/layout/navbar/Navbar.css
+++ b/ecommerce-react/src/components/layout/navbar/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-    background-color: rgb(253, 143, 18);
+    background-color: #E40544;
     padding: 10px 0;
 }
 
@@ -13,7 +13,7 @@ li{
     font-family:sans-serif;
     font-size: 18px;
     font-weight: 500;
-    text-transform: uppercase;
+    text-transform: capitalize;
     padding:0 15px;
     list-style: none;
 }
