--- a/ecommerce-react/src/components/layout/navbar/Navbar.css
+++ b/ecommerce-react/src/components/layout/navbar/Navbar.css
@@ -4,6 +4,10 @@
     border-bottom: black 3px solid;
 }
 
+.navbar img{
+    margin-left: 20px;
+}
+
 ul{
     display: flex;
     align-items: center;
