--- a/src/components/pages/checkoutOficial/CheckoutOficial.css
+++ b/src/components/pages/checkoutOficial/CheckoutOficial.css
@@ -44,7 +44,7 @@
 }
 
 .gracias-item p {
-    font-size: 45px;
+    font-size: 39px;
 }
 
 #msj1{
@@ -53,14 +53,112 @@
     display: flex;
     justify-content: center;
     text-transform: uppercase;
+    text-shadow: 2px 2px 10px #000;
 }
 
 #msj2{
-    background-color: #ffffff;
+    background-color: #fff;
     margin-top: 30px;
     padding: 10px;
     display: flex;
     text-align: center;
     border-radius: 3px;
 
+}
+
+.checkout-container{
+    padding: 50px;
+    
+}
+
+form{
+    background-color: #ddd;
+    padding: 100px;
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    border-radius: 20px;
+    margin-top: 50px;
+    width: 50%;
+    margin-left: 150px;
+}
+
+.checkout-container input{
+    padding: 12px;
+    border: 1px solid rgba(225, 225, 225, 0.25);
+    background: #1b2b3a;
+    border-radius: 5px;
+    outline: none;
+    color: #fff;
+    font-size: 1em;
+    transition: 0.5s;
+    width: 60%;
+    
+}
+
+.checkout-container form span {
+    position: absolute;
+    padding: 10px;
+    pointer-events: none;
+    font-size: 1em;
+    color: rgba(225, 225, 225, 0.40);
+    text-transform: uppercase;
+    transition: 0.5s;
+    margin-top: -121px;
+}
+
+.checkout-container span:nth-child(8) {
+    top: 744px;
+}
+
+.checkout-container form span:nth-child(2) {
+    top: 534px;
+}
+
+.checkout-container form span:nth-child(6) {
+    top: 674px;
+}
+
+.checkout-container form span:nth-child(4) {
+    top: 603px;
+}
+
+.checkout-container input:valid ~ span,
+.checkout-container input:focus ~ span {
+    color: #45dc4e;
+    transform: translateX(10px) translateY(-7px)  ;
+    font-size: 0.65em;
+    padding: 0 10px;
+    background: #1b2b3a;
+    border: 1px solid #45dc4e;
+    border-radius: 2px;
+    letter-spacing: 0.2em;
+}
+
+.checkout-container:nth-child(0) input:valid ~ span,
+.checkout-container:nth-child(1) input:focus ~ span {
+    background: #45dc4e;
+    color: #1b2b3a;
+    border-radius: 2px;
+}
+
+
+.checkout-container input:valid,
+.checkout-container input:focus{
+    border: 1px solid #45dc4e;
+}
+
+
+
+
+
+
+
+
+
+
+.botones {
+    margin-left: 70px;
+    display: flex;
+    gap: 15px;
 }
