--- a/src/components/pages/itemDetailContainer/ItemDetail.css
+++ b/src/components/pages/itemDetailContainer/ItemDetail.css
@@ -1,10 +1,9 @@
 .detail-container{
-    padding: 10px;
     background-color: #1f1f6d;
     color: white;
 }
 
-.detail-container img {
+.detail-items img {
     border: 25px solid white;
     border-radius: 7px;
     height: 550px;
@@ -18,6 +17,7 @@
     align-items: center;
     justify-content: center;
     font-weight: 700;
+    text-shadow: 2px 2px 4px #000;
 }
 
 .detail-items{
@@ -38,6 +38,7 @@
 .detail-price {
     font-size: 40px;
     margin-left: 80px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .boton-carrito{
