--- a/src/components/common/error/EnConstruccion.css
+++ b/src/components/common/error/EnConstruccion.css
@@ -32,3 +32,39 @@
     align-items: center;
     justify-content: center;
 }
+
+@media only screen and (max-width: 480px){
+
+    .construccion-container{
+        background: #fff;
+        height: 400px;
+    }
+    
+    .construccion-container h1 {
+        position: relative;
+        top: 20px;
+        left: 0px;
+        display: flex;
+        padding: 20px;
+        text-transform: uppercase;
+        font-size: 2em;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    }
+    
+    .img-item {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .img-item img {
+        height: 300px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+}
+
+@media only screen and (min-width: 481px) and (max-width: 767px){
+
+}
