--- a/src/components/layout/footer/Footer.css
+++ b/src/components/layout/footer/Footer.css
@@ -6,10 +6,6 @@
     margin-top: 100px;
 }
 
-.WhatsAppIcon{
-    color: greenyellow;
-}
-
 .footer-container{
     display: flex;
     justify-content: space-around;
@@ -36,14 +32,14 @@ html{
     scroll-behavior: smooth;
 }
 
-.redes {
+.redes-footer {
     display: flex;
     padding: 25px;
     gap: 10px;
     width: 30%;
 }
 
-.redes a > svg{
+.redes-footer a > svg{
     width: 100%;
     color: #fff;
     font-size: 100px;
@@ -51,7 +47,7 @@ html{
     margin-top: 15px;
 }
 
-.redes a > svg:hover {
+.redes-footer a > svg:hover {
     color: #f0cf17;
 }
 
@@ -93,4 +89,94 @@ html{
 .copyright:hover{
     color: #f0cf17;
     transition: all 0.3s;
+}
+
+@media only screen and (max-width: 480px) {
+
+    .footer{
+        background-color: #1a1a1a;
+        color: white;
+        width: 100%;
+        height: 600px;
+        margin-top: 100px;
+    }
+    
+    .footer-container{
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        padding-top: 40px;
+        gap: 50px;
+    }
+    
+    .subir{
+        height: 40px;
+        width: 40px;
+        line-height: 50px;
+        font-family: 25px;
+        color: #000000;
+        background-color: #f0cf17;
+        text-align: center;
+        position: fixed;
+        bottom: 40px;
+        right: 40px;
+        border: 2px solid white;
+        border-radius: 3px;
+        
+    }
+    
+    .redes-footer {
+        display: inline;
+        padding: 25px;
+        width: 30%;
+    }
+    
+    .redes-footer a > svg{
+        width: 10%;
+        color: #fff;
+        font-size: 100px;
+        height: 35px;
+        margin-top: 35px;
+        margin-left: 40px;
+    }  
+    
+    #a li{
+        margin-bottom: 15px;
+        background-color: #f0cf17;
+        border-radius: 3px;
+        padding: 5px;
+        display: flex;
+        justify-content: center;
+        color: #000;
+    }
+    
+    .medios-de-pago li{
+        width: 40%;
+        margin-left: 147px;
+        display: flex;
+        justify-content: center;
+    }
+    
+    .medios-de-pago img{
+        height: 25px;
+        margin-top: 15px;
+        margin-left: 7px;
+        flex-wrap: wrap;
+        
+    }
+    
+    .copyright{
+        display: flex;
+        justify-content: center;
+        margin-top: 20px;
+        font-size: 20px;
+        color: #f0cf17;
+        text-align: center;
+    }
+
+
+}
+
+@media only screen and (min-width: 481px) and (max-width: 767px) {
+
 }
