--- a/src/components/layout/navbar/Navbar.css
+++ b/src/components/layout/navbar/Navbar.css
@@ -18,7 +18,55 @@ li{
     font-family:sans-serif;
     font-size: 18px;
     font-weight: 500;
-    text-transform: capitalize;
     padding:0 15px;
     list-style: none;
+}
+
+
+@media only screen and (max-width: 480px) {
+
+    .navbar {
+        background-color: #E40544;
+        padding: 20px 20px;
+        border-bottom: black 3px solid;
+    }
+
+    .navbar img{
+        margin-left: 160px;
+        margin-bottom: 30px;
+        height: 80px;
+        width: auto;
+    }
+
+    ul{
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+    }
+
+    li{
+        font-family:sans-serif;
+        font-size: 18px;
+        font-weight: 500;
+        text-transform: capitalize;
+        list-style: none;
+    }
+    
+    #boton-navbar {
+        border: 3px solid #fff;
+        border-radius: 10px;
+        font-size: 20px;
+    }
+
+    #cartwidget {
+        margin: 30px;
+        background-color: #fff;
+        padding: 25px;
+        border-radius: 40px;
+    }
+
+}
+
+@media only screen and (min-width: 481px) and (max-width: 767px) {
+    
 }
