--- a/src/components/pages/cart/Cart.css
+++ b/src/components/pages/cart/Cart.css
@@ -1,92 +1,186 @@
-.cart-container{
-    background-color: #fff;
-    min-height: 600px;
-    width: 80%;
-    border-radius: 20px;
-    margin: 50px 150px;
+.cart-container {
+  background-color: #fff;
+  min-height: 600px;
+  width: 80%;
+  border-radius: 20px;
+  margin: 50px 150px;
 }
 
-.cart-item{
+.cart-item {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  justify-content: center;
+}
+
+.cart-item img {
+  height: 50px;
+  transition: 0.9s ease;
+}
+
+.cart-item img:hover {
+  transform: translateX(20px);
+}
+
+.cart-title {
+  font-size: 50px;
+  color: black;
+  text-align: center;
+  padding-top: 20px;
+}
+
+.card {
+  border: 4px solid #ffdd00;
+  height: 200px;
+  width: 50%;
+  border-radius: 3px;
+  padding: 5px;
+  margin: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  gap: 40px;
+  background-color: rgba(255, 221, 0, 0.35);
+}
+
+.card img {
+  height: 200px;
+  padding: 10px;
+}
+
+.buttons {
+  margin: 20px;
+  padding: 70px;
+  display: flex;
+  gap: 30px;
+}
+
+.total {
+  background-color: #ffe100;
+  border-radius: 40px;
+  width: 32%;
+  padding: 28px;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  text-transform: uppercase;
+  font-weight: 900;
+  font-size: 30px;
+  margin: 60px 0 0 500px;
+  display: flex;
+}
+
+.tachito {
+  animation: none;
+}
+
+.tachito:hover {
+  transition: transform 0.3s ease;
+  animation: shake 2s infinite;
+}
+
+@keyframes shake {
+  0%,
+  100% {
+    transform: rotate(10deg);
+  }
+  25%,
+  75% {
+    transform: rotate(-10deg);
+  }
+  50% {
+    transform: rotate(10deg);
+  }
+}
+
+@media only screen and (max-width: 480px) {
+
+  .cart-container {
+    background-color: #fff;
+    min-height: 600px;
+    width: 100%;
+    border-radius: 20px;
+    margin: 0;
+  }
+
+  .cart-item {
     display: flex;
     align-items: center;
     gap: 10px;
     justify-content: center;
-}
+    background-color: #000;
+  }
 
-.cart-item img{
-    height: 50px;
-    transition: 0.9s ease;
-}
+  .cart-item img {
+    display: none;
+  }
 
-.cart-item img:hover{
-    transform: translateX(20px);
-}
-
-
-.cart-title{
-    font-size: 50px;
-    color: black;
+  .cart-title {
+    font-size: 30px;
+    color: #fff;
     text-align: center;
-    padding-top: 20px;
-}
+    padding: 20px;
+    text-transform: uppercase;
+    font-weight: 900;
+  }
 
-.card{
+  .card {
     border: 4px solid #ffdd00;
-    height: 200px;
-    width: 50%;
+    height: 250px;
+    width: 90%;
     border-radius: 3px;
-    padding: 5px;
-    margin: 30px;
+    padding: 0px;
+    margin: 20px;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    gap: 40px;
+    gap: 0px;
     background-color: rgba(255, 221, 0, 0.35);
-}
+  }
 
-.card img{
-    height: 200px;
+  .card img {
+    height: 150px;
     padding: 10px;
-}
+  }
 
-.buttons{
+  .card h1 {
+    font-size: 20px;
+  }
+
+  .card h2{
+    font-size: 20px;
+    padding: 10px;
+    
+  }
+
+  .card h3{
+    position: relative;
+    top: 80px;
+    right: 70px;
+  }
+
+  .buttons {
     margin: 20px;
     padding: 70px;
     display: flex;
     gap: 30px;
-}
-
-.total{
-    background-color: #ffe100;
-    border-radius: 40px;
-    width: 32%;
-    padding: 28px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    text-transform: uppercase;
-    font-weight: 900;
-    font-size: 30px;
-    margin: 60px 0 0 500px;
-    display: flex;
-}
-
-.tachito{
-    animation: none;
-}
-
-.tachito:hover { 
-    transition: transform 0.3s ease;
-    animation: shake 2s infinite; 
   }
 
+  .total {
+    background-color: #ffe100;
+    border-radius: 40px;
+    width: 79%;
+    padding: 15px;
+    font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+    text-transform: uppercase;
+    font-weight: 900;
+    font-size: 25px;
+    margin: 50px 0 0 50px;
+    display: flex;
+  }
 
-@keyframes shake {
-        0%, 100% {
-          transform: rotate(10deg);
-        }
-        25%, 75% {
-          transform: rotate(-10deg);
-        }
-        50% {
-          transform: rotate(10deg);
-        }
-      }
+  .tachito {
+    animation: none;
+  }
+}
+
+@media only screen and (min-width: 481px) and (max-width: 767px) {
+}
