--- a/src/components/pages/contacto/Contacto.css
+++ b/src/components/pages/contacto/Contacto.css
@@ -65,3 +65,72 @@
 .lista-playstation img:hover{
     scale: 120%;
 }
+
+@media only screen and (max-width: 480px) {
+    
+.contacto-items {
+    background-color: #ddd;
+    width: 100%;
+    height: 730px;
+    padding: 20px;
+    border-radius: 10px;
+    border: 3px solid #b5b5b5;
+}
+
+.contacto-titulo {
+    font-size: 24px;
+    text-transform: uppercase;
+    padding: 0px;
+    margin-bottom: 40px;
+}
+
+.texto-datos {
+    font-size: 16px;
+    padding-bottom: 25px;
+}
+
+.texto-datos img {
+    height: 20px;
+}
+
+.redes-titulo {
+    font-size: 22px;
+    margin-top: 50px;
+}
+
+.redes {
+    gap: 20px;
+    margin-top: 20px;
+    display: flex;
+}
+
+.redes img {
+    height: 40px;
+    
+}
+
+.playstation{
+    font-size: 25px;
+    color: #006FCD;
+    margin-top: 20px;
+    padding:35px;
+}
+
+.lista-playstation{
+    margin-right: 0px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    
+}
+
+.lista-playstation img{
+    height: 40px;
+    padding: 5px;
+    border-radius: 10px;
+}
+}
+
+@media only screen and (min-width: 481px) and (max-width: 767px) {
+
+}
