--- a/src/components/pages/checkout/Checkout.css
+++ b/src/components/pages/checkout/Checkout.css
@@ -1,4 +1,4 @@
-.checkout-container h1{
+/* .checkout-container h1{
     color: white;
     text-transform: uppercase;
 }
@@ -27,4 +27,4 @@ input{
     padding: 6px;
     background-color: rgb(255, 234, 0);
     border-radius: 6px;
-}
+} */
