--- a/src/components/pages/checkoutOficial/CheckoutOficial.css
+++ b/src/components/pages/checkoutOficial/CheckoutOficial.css
@@ -1,4 +1,4 @@
-.gracias-container h1 {
+/* .gracias-container h1 {
   color: #1ed702;
   display: flex;
   margin: 20px 0 0 20px;
@@ -310,3 +310,4 @@ form {
 @media only screen and (min-width: 481px) and (max-width: 767px) {
 
 }
+ */
