--- a/src/components/common/error/EnConstruccion.css
+++ b/src/components/common/error/EnConstruccion.css
@@ -1,70 +1,71 @@
-.construccion-container{
-    background: #fff;
+.construccion-container {
+  background: #fff;
 }
 
 .construccion-container h1 {
-    position: absolute;
-    left: 300px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 50px;
-    text-transform: uppercase;
-    font-size: 5em;
-    transition: transform 0.5s ease;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  position: absolute;
+  left: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 50px;
+  text-transform: uppercase;
+  font-size: 5em;
+  transition: transform 0.5s ease;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .construccion-container h1:hover {
-    transform: rotate(20deg) translateY(50%) translatex(10%) ;
-
+  transform: rotate(15deg) translateY(50%) translatex(0%);
 }
 
 .img-item {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .img-item img {
-    height: 700px;
+  height: 700px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@media only screen and (max-width: 480px) {
+  .construccion-container {
+    background: #fff;
+    height: 400px;
+  }
+
+  .construccion-container h1 {
+    position: relative;
+    top: 20px;
+    left: 0px;
+    display: flex;
+    padding: 20px;
+    text-transform: uppercase;
+    font-size: 2em;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  }
+
+  .construccion-container h1:hover {
+    transform: rotate(0deg) translateY(0%) translatex(0%);
+  }
+
+  .img-item {
     display: flex;
     align-items: center;
     justify-content: center;
+  }
+
+  .img-item img {
+    height: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
-@media only screen and (max-width: 480px){
-
-    .construccion-container{
-        background: #fff;
-        height: 400px;
-    }
-    
-    .construccion-container h1 {
-        position: relative;
-        top: 20px;
-        left: 0px;
-        display: flex;
-        padding: 20px;
-        text-transform: uppercase;
-        font-size: 2em;
-        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-    }
-    
-    .img-item {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-    
-    .img-item img {
-        height: 300px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-}
-
-@media only screen and (min-width: 481px) and (max-width: 767px){
-
+@media only screen and (min-width: 481px) and (max-width: 767px) {
 }
