--- a/src/components/layout/footer/Footer.css
+++ b/src/components/layout/footer/Footer.css
@@ -97,7 +97,7 @@ html{
         background-color: #1a1a1a;
         color: white;
         width: 100%;
-        height: 600px;
+        height: 610px;
         margin-top: 100px;
     }
     
@@ -172,6 +172,7 @@ html{
         font-size: 20px;
         color: #f0cf17;
         text-align: center;
+        padding: 10px;
     }
 
 
