--- a/src/components/pages/contacto/Contacto.css
+++ b/src/components/pages/contacto/Contacto.css
@@ -36,6 +36,7 @@
 .redes img {
     height: 80px;
     transition: scale 500ms;
+    margin: 30px 40px 20px 0px;
 }
 
 .redes img:hover {
@@ -46,12 +47,12 @@
 .playstation{
     font-size: 35px;
     color: #006FCD;
-    margin-top: 50px;
-    padding:35px;
+    margin-top: 65px;
+    padding:30px;
 }
 
 .lista-playstation{
-    margin-right: 650px;
+    margin-right: 550px;
     
 }
 
@@ -99,8 +100,8 @@
 }
 
 .redes {
-    gap: 20px;
-    margin-top: 20px;
+    gap: 5px;
+    margin-top: 8px;
     display: flex;
 }
 
@@ -117,7 +118,7 @@
 }
 
 .lista-playstation{
-    margin-right: 0px;
+    margin: -10px 20px 0px 0px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
