--- a/src/components/common/error/EnConstruccion.css
+++ b/src/components/common/error/EnConstruccion.css
@@ -67,5 +67,40 @@
   }
 }
 
-@media only screen and (min-width: 481px) and (max-width: 767px) {
+@media only screen and (min-width: 481px) and (max-width: 768px) {
+
+  .construccion-container {
+    background: #fff;
+  }
+  
+  .construccion-container h1 {
+    position: absolute;
+    left: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 50px;
+    text-transform: uppercase;
+    font-size: 40px;
+    transition: transform 0.5s ease;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  }
+  
+  .construccion-container h1:hover {
+    transform: rotate(15deg) translateY(50%) translatex(0%);
+  }
+  
+  .img-item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .img-item img {
+    height: 450px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
 }
