--- a/src/components/layout/navbar/Navbar.css
+++ b/src/components/layout/navbar/Navbar.css
@@ -1,75 +1,100 @@
 .navbar {
-    background-color: #E40544;
-    padding: 10px 0;
-    border-bottom: black 3px solid;
+  background-color: #e40544;
+  padding: 10px 0;
+  border-bottom: black 3px solid;
 }
 
-.navbar img{
-    margin-left: 20px;
+.navbar img {
+  margin-left: 20px;
 }
 
-ul{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+ul {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
 }
 
-li{
-    font-family:sans-serif;
-    font-size: 18px;
-    font-weight: 500;
-    padding:0 15px;
-    list-style: none;
+li {
+  font-family: sans-serif;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 0 15px;
+  list-style: none;
 }
-
 
 @media only screen and (max-width: 480px) {
+  .navbar {
+    background-color: #e40544;
+    padding: 20px 20px;
+    border-bottom: black 3px solid;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
 
-    .navbar {
-        background-color: #E40544;
-        padding: 20px 20px;
-        border-bottom: black 3px solid;
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-    }
+  .navbar img {
+    margin-left: 0px;
+    margin-bottom: 30px;
+    height: 80px;
+    width: auto;
+  }
 
-    .navbar img{
-        margin-left: 0px;
-        margin-bottom: 30px;
-        height: 80px;
-        width: auto;
-    }
+  ul {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  }
 
-    ul{
-        display: flex;
-        flex-direction: column;
-        gap: 12px;
-    }
+  li {
+    font-family: sans-serif;
+    font-size: 18px;
+    font-weight: 500;
+    text-transform: capitalize;
+    list-style: none;
+  }
 
-    li{
-        font-family:sans-serif;
-        font-size: 18px;
-        font-weight: 500;
-        text-transform: capitalize;
-        list-style: none;
-    }
-    
-    #boton-navbar {
-        border: 3px solid #fff;
-        border-radius: 10px;
-        font-size: 20px;
-    }
+  #boton-navbar {
+    border: 3px solid #fff;
+    border-radius: 10px;
+    font-size: 20px;
+  }
 
-    #cartwidget {
-        margin: 30px;
-        background-color: #fff;
-        padding: 25px;
-        border-radius: 40px;
-    }
-
+  #cartwidget {
+    margin: 30px;
+    background-color: #fff;
+    padding: 25px;
+    border-radius: 40px;
+  }
 }
 
-@media only screen and (min-width: 481px) and (max-width: 767px) {
-    
+@media only screen and (min-width: 481px) and (max-width: 768px) {
+  .navbar {
+    background-color: #e40544;
+    padding: 30px 0;
+    border-bottom: black 3px solid;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .navbar img {
+    margin-left: 20px;
+    height: 90px;
+    width: auto;
+  }
+  
+  ul {
+    display: flex;
+    flex-direction: flex;
+    flex-wrap: wrap;
+    gap: 25px;
+  }
+  
+  li {
+    font-family: sans-serif;
+    font-size: 18px;
+    padding: 0 5px;
+    list-style: none;
+  }
 }
