--- a/src/components/pages/cart/Cart.css
+++ b/src/components/pages/cart/Cart.css
@@ -92,7 +92,6 @@
 }
 
 @media only screen and (max-width: 480px) {
-
   .cart-container {
     background-color: #fff;
     min-height: 600px;
@@ -145,13 +144,12 @@
     font-size: 20px;
   }
 
-  .card h2{
+  .card h2 {
     font-size: 20px;
     padding: 10px;
-    
   }
 
-  .card h3{
+  .card h3 {
     position: relative;
     top: 80px;
     right: 70px;
@@ -182,5 +180,98 @@
   }
 }
 
-@media only screen and (min-width: 481px) and (max-width: 767px) {
+@media only screen and (min-width: 481px) and (max-width: 768px) {
+
+  .cart-container {
+    background-color: #fff;
+    min-height: 600px;
+    width: 100%;
+    border-radius: 20px;
+    margin: 30px 0px;
+  }
+  
+  .cart-item {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    justify-content: center;
+  }
+  
+  .cart-item img {
+    height: 50px;
+    transition: 0.9s ease;
+  }
+  
+  .cart-item img:hover {
+    transform: translateX(20px);
+  }
+  
+  .cart-title {
+    font-size: 50px;
+    color: black;
+    text-align: center;
+    padding-top: 20px;
+  }
+  
+  .card {
+    border: 4px solid #ffdd00;
+    height: 200px;
+    width: 95%;
+    border-radius: 3px;
+    padding: 5px;
+    margin: 40px 20px 20px 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    gap: 40px;
+    background-color: rgba(255, 221, 0, 0.35);
+  }
+  
+  .card img {
+    height: 200px;
+    padding: 10px;
+  }
+  
+  .buttons {
+    margin: 20px;
+    padding: 70px;
+    display: flex;
+    gap: 30px;
+  }
+  
+  .total {
+    background-color: #ffe100;
+    border-radius: 40px;
+    width: 70%;
+    padding: 28px;
+    font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+    text-transform: uppercase;
+    font-weight: 900;
+    font-size: 30px;
+    margin: 60px 0 0 100px;
+    display: flex;
+  }
+  
+  .tachito {
+    animation: none;
+  }
+  
+  .tachito:hover {
+    transition: transform 0.3s ease;
+    animation: shake 2s infinite;
+  }
+  
+  @keyframes shake {
+    0%,
+    100% {
+      transform: rotate(10deg);
+    }
+    25%,
+    75% {
+      transform: rotate(-10deg);
+    }
+    50% {
+      transform: rotate(10deg);
+    }
+  }
 }
