--- a/src/components/pages/checkoutFormik/CheckoutFormik.css
+++ b/src/components/pages/checkoutFormik/CheckoutFormik.css
@@ -1,4 +1,225 @@
 .gracias-container h1 {
+  color: #1ed702;
+  display: flex;
+  margin: 20px 0 0 20px;
+  font-weight: 900;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  text-transform: uppercase;
+}
+
+.link {
+  background-color: #fff;
+  padding: 8px;
+  border-radius: 5px;
+  text-decoration: none;
+  margin: 15px 0 0 20px;
+  display: inline-block;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  text-transform: uppercase;
+  border: 2px solid #808080;
+}
+
+.gracias-item {
+  padding: 50px;
+  width: 40%;
+  border-radius: 30px;
+  margin: 70px 0 0 500px;
+  background-color: #1ed702;
+  transition: 0.4s ease;
+  border: 3px solid #fff;
+}
+
+.gracias-item:hover {
+  box-shadow: 0 0 10px 5px rgb(255, 255, 255);
+  transform: rotate(2deg);
+}
+
+.gracias-item img {
+  display: flex;
+  align-items: center;
+  height: 180px;
+  width: 50%;
+  margin-left: 170px;
+}
+
+.gracias-item p {
+  font-size: 39px;
+}
+
+#msj1 {
+  color: #fff;
+  padding: 30px;
+  display: flex;
+  justify-content: center;
+  text-transform: uppercase;
+  text-shadow: 2px 2px 10px #000;
+}
+
+#msj2 {
+  background-color: #fff;
+  margin-top: 30px;
+  padding: 10px;
+  display: flex;
+  text-align: center;
+  border-radius: 3px;
+}
+
+.checkout-container {
+  width: 100%;
+}
+
+.checkout-container .checkout-title {
+  color: #fff;
+  padding: 40px 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  margin: 0;
+  justify-content: center;
+  font-size: 3em;
+}
+
+form {
+  border: 3px solid #368ee6;
+  width: 50%;
+  background-color: #f9f9f9;
+  border-radius: 20px;
+  padding: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 30px 0 0 400px;
+}
+
+.data {
+  display: flex;
+  justify-content: center;
+  margin: 20px 0px 50px 80px;
+  gap: 25px;
+  flex-direction: column;
+  width: 60%;
+}
+
+.botones {
+  margin-left: 70px;
+  display: flex;
+  gap: 55px;
+}
+
+@media only screen and (max-width: 480px) {
+  .gracias-container h1 {
+    color: #1ed702;
+    display: flex;
+    margin: 20px 0 0 20px;
+    font-weight: 900;
+    font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+    text-transform: uppercase;
+    font-size: 22px;
+  }
+
+  .link {
+    background-color: #fff;
+    padding: 5px;
+    border-radius: 8px;
+    text-decoration: none;
+    margin: 15px 0 0 20px;
+    display: inline-block;
+    font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+    text-transform: uppercase;
+    border: 2px solid #808080;
+  }
+
+  .gracias-item {
+    padding: 0px 30px 30px 30px;
+    width: 100%;
+    border-radius: 30px;
+    margin: 40px 0 0 0px;
+    background-color: #1ed702;
+    transition: 0.4s ease;
+    border: 3px solid #fff;
+  }
+
+  .gracias-item:hover {
+    box-shadow: 0 0 10px 5px rgb(255, 255, 255);
+    transform: none;
+  }
+
+  .gracias-item img {
+    display: flex;
+    align-items: center;
+    height: 100px;
+    width: 100%;
+    margin-left: 0px;
+  }
+
+  .gracias-item p {
+    font-size: 2em;
+  }
+
+  #msj1 {
+    color: #fff;
+    padding: 30px;
+    display: flex;
+    text-align: center;
+    text-transform: uppercase;
+    text-shadow: 2px 2px 10px #000;
+  }
+
+  #msj2 {
+    background-color: #fff;
+    margin-top: 30px;
+    padding: 10px;
+    display: flex;
+    text-align: center;
+    border-radius: 3px;
+  }
+
+  .checkout-container {
+    width: 100%;
+  }
+
+  .checkout-container .checkout-title {
+    color: #fff;
+    padding: 40px 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    margin: 0;
+    justify-content: center;
+    font-size: 2em;
+  }
+
+  form {
+    border: 3px solid #368ee6;
+    width: 100%;
+    background-color: #f9f9f9;
+    border-radius: 20px;
+    padding: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 30px 0 0 0px;
+  }
+
+  .data {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0px 50px 0px;
+    gap: 25px;
+    flex-direction: column;
+    width: 60%;
+  }
+
+  .botones {
+    margin-left: 0px;
+    display: flex;
+    gap: 20px;
+  }
+}
+
+@media only screen and (min-width: 481px) and (max-width: 768px) {
+
+  .gracias-container h1 {
     color: #1ed702;
     display: flex;
     margin: 20px 0 0 20px;
@@ -21,9 +242,9 @@
   
   .gracias-item {
     padding: 50px;
-    width: 40%;
+    width: 90%;
     border-radius: 30px;
-    margin: 70px 0 0 500px;
+    margin: 70px 0 0 30px;
     background-color: #1ed702;
     transition: 0.4s ease;
     border: 3px solid #fff;
@@ -63,25 +284,24 @@
     text-align: center;
     border-radius: 3px;
   }
-
-.checkout-container{
+  
+  .checkout-container {
     width: 100%;
-}
-
-.checkout-container .checkout-title{
-    color:#fff;
+  }
+  
+  .checkout-container .checkout-title {
+    color: #fff;
     padding: 40px 0;
     background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     margin: 0;
     justify-content: center;
     font-size: 3em;
-
-}
-
-form{
+  }
+  
+  form {
     border: 3px solid #368ee6;
-    width: 50%;
+    width: 85%;
     background-color: #f9f9f9;
     border-radius: 20px;
     padding: 40px;
@@ -89,137 +309,21 @@ form{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 30px 0 0 400px ;
-}
-
-.data {
+    margin: 30px 0 0 60px;
+  }
+  
+  .data {
     display: flex;
     justify-content: center;
-    margin: 20px 0px 50px 80px;
+    margin: 20px 0px 50px 00px;
     gap: 25px;
     flex-direction: column;
     width: 60%;
-}
-
-.botones {
-    margin-left: 70px;
+  }
+  
+  .botones {
+    margin-left: 00px;
     display: flex;
     gap: 55px;
-}
-
-@media only screen and (max-width: 480px) {
-
-    .gracias-container h1 {
-        color: #1ed702;
-        display: flex;
-        margin: 20px 0 0 20px;
-        font-weight: 900;
-        font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-        text-transform: uppercase;
-        font-size: 22px;
-      }
-      
-      .link {
-        background-color: #fff;
-        padding: 5px;
-        border-radius: 8px;
-        text-decoration: none;
-        margin: 15px 0 0 20px;
-        display: inline-block;
-        font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-        text-transform: uppercase;
-        border: 2px solid #808080;
-      }
-      
-      .gracias-item {
-        padding: 0px 30px 30px 30px;
-        width: 100%;
-        border-radius: 30px;
-        margin: 40px 0 0 0px;
-        background-color: #1ed702;
-        transition: 0.4s ease;
-        border: 3px solid #fff;
-      }
-      
-      .gracias-item:hover {
-        box-shadow: 0 0 10px 5px rgb(255, 255, 255);
-        transform: none;
-      }
-      
-      .gracias-item img {
-        display: flex;
-        align-items: center;
-        height: 100px;
-        width: 100%;
-        margin-left: 0px;
-      }
-      
-      .gracias-item p {
-        font-size: 2em;
-      }
-      
-      #msj1 {
-        color: #fff;
-        padding: 30px;
-        display: flex;
-        text-align: center;
-        text-transform: uppercase;
-        text-shadow: 2px 2px 10px #000;
-      }
-      
-      #msj2 {
-        background-color: #fff;
-        margin-top: 30px;
-        padding: 10px;
-        display: flex;
-        text-align: center;
-        border-radius: 3px;
-      }
-    
-    .checkout-container{
-        width: 100%;
-    }
-    
-    .checkout-container .checkout-title{
-        color:#fff;
-        padding: 40px 0;
-        background-color: rgba(0, 0, 0, 0.5);
-        display: flex;
-        margin: 0;
-        justify-content: center;
-        font-size: 2em;
-    
-    }
-    
-    form{
-        border: 3px solid #368ee6;
-        width: 100%;
-        background-color: #f9f9f9;
-        border-radius: 20px;
-        padding: 40px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin: 30px 0 0 0px ;
-    }
-    
-    .data {
-        display: flex;
-        justify-content: center;
-        margin: 20px 0px 50px 0px;
-        gap: 25px;
-        flex-direction: column;
-        width: 60%;
-    }
-    
-    .botones {
-        margin-left: 0px;
-        display: flex;
-        gap: 20px;
-    }
-}
-
-@media only screen and (min-width: 481px) and (max-width: 767px) {
-
+  }
 }
